# QImguiWidget

./: .clang-format  .gitignore  CMakeLists.txt  FindQImguiWidget.cmake  QImguiWidget.cpp  QImguiWidget.h  QImguiWidget.pri  QImguiWidgetConfig.cmake  README.md
QtCreatorDesignerPlugin/: CMakeLists.txt
QtCreatorDesignerPlugin/plugins/: ImAreaPlugin.cpp  ImAreaPlugin.h  ImPushButtonPlugin.cpp  ImPushButtonPlugin.h
QtCreatorDesignerPlugin/widgets/: ImArea.cpp  ImArea.h  ImPushButton.cpp  ImPushButton.h
QtDesignerPlugin/: CMakeLists.txt  QImguiWidgetQtDesignerPlugin.cpp  QImguiWidgetQtDesignerPlugin.h
example/: CMakeLists.txt  example.h  main.cpp
examples/: CMakeLists.txt
examples/pushbutton_example/: CMakeLists.txt  widget.ui
hdr/QImguiWidget/: QImguiWidget.h
src/: QImguiWidget.cpp
